[gd_scene load_steps=2 format=3 uid="uid://c777lb3cw07a6"]

[ext_resource type="Script" uid="uid://k4183yo6urav" path="res://Scenes/Menus/create_user.gd" id="1_7f6uj"]

[node name="CreateUser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7f6uj")

[node name="CreateEmployee" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_right = 178.5
offset_bottom = 23.0
grow_horizontal = 2
text = "Create Employee"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.5
offset_top = -145.0
offset_right = 164.5
offset_bottom = 145.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/NameBox"]
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="VBoxContainer/NameBox"]
layout_mode = 2

[node name="IDBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="IDLabel" type="Label" parent="VBoxContainer/IDBox"]
layout_mode = 2
text = "ID"
horizontal_alignment = 1

[node name="IDInput" type="LineEdit" parent="VBoxContainer/IDBox"]
layout_mode = 2

[node name="ScrapBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrapLabel" type="Label" parent="VBoxContainer/ScrapBox"]
layout_mode = 2
text = "Scrap (integer)"
horizontal_alignment = 1

[node name="ScrapInput" type="LineEdit" parent="VBoxContainer/ScrapBox"]
layout_mode = 2

[node name="GasBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="GasLabel" type="Label" parent="VBoxContainer/GasBox"]
layout_mode = 2
text = "Gas (integer, mL)"
horizontal_alignment = 1

[node name="GasInput" type="LineEdit" parent="VBoxContainer/GasBox"]
layout_mode = 2

[node name="SubmitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Submit"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
